java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-service
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 8181
    protocol: TCP
  selector:
    app: spring-boot-app
