java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/07-ingress.yaml
# Ingress Resource
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cube-api
  annotations: 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: cubejs.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: cube-api
            port:
              number: 4000
